--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "html-webpack-plugin": "^2.30.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
     "style-loader": "^0.20.1",
     "webpack": "^3.10.0"
   },
